--- a/mathematics/algebra/Rotman_Springer-2009_Homological-Algebra/exercises/Rotman-2009-Exercises.tex
+++ b/mathematics/algebra/Rotman_Springer-2009_Homological-Algebra/exercises/Rotman-2009-Exercises.tex
@@ -125,6 +125,10 @@
 
 \newcommand{\Sets}{\textbf{Sets}}
 \newcommand{\Obj}{\textnormal{Obj}}
+\newcommand{\Hom}{\textbf{Hom}}
+\newcommand{\id}{\textnormal{id}}
+\newcommand{\Mod}{\textbf{Mod}}
+\newcommand{\Groups}{\textbf{Groups}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
