--- a/mathematics/algebra/Rotman_Springer-2009_Homological-Algebra/exercises/Rotman-2009-Exercises.tex
+++ b/mathematics/algebra/Rotman_Springer-2009_Homological-Algebra/exercises/Rotman-2009-Exercises.tex
@@ -129,6 +129,7 @@
 \newcommand{\id}{\textnormal{id}}
 \newcommand{\Mod}{\textbf{Mod}}
 \newcommand{\Groups}{\textbf{Groups}}
+\newcommand{\Top}{\textbf{Top}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
