--- a/mathematics/algebra/Rotman_Springer-2009_Homological-Algebra/exercises/z-Rotman-2009-exercises-Chap05.tex
+++ b/mathematics/algebra/Rotman_Springer-2009_Homological-Algebra/exercises/z-Rotman-2009-exercises-Chap05.tex
@@ -148,6 +148,9 @@ and a terminal object.
 	Prove that \,$\left\{\,0\,\right\}$\, is a zero object in $_{R}\Mod$ and that
 	\,$\left\{\,1\,\right\}$\, is a zero object in \Groups.
 	
+\item
+	Prove that neither \Sets\, nor \Top\, has a zero object.
+	
 \end{enumerate}
 
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
