--- a/mathematics/algebra/Rotman_Springer-2009_Homological-Algebra/exercises/z-Rotman-2009-exercises-Chap05.tex
+++ b/mathematics/algebra/Rotman_Springer-2009_Homological-Algebra/exercises/z-Rotman-2009-exercises-Chap05.tex
@@ -116,7 +116,7 @@ and a terminal object.
 	\vskip 0.2cm
 	\underline{Initial objects, if they exist, are unique up to isomorphism.}
 	\vskip 0.0cm
-	Suppose $I_{1}, I_{2} \in \Obj(\mathcal{C})$ be two initial objects in the category $\mathcal{C}$.
+	Suppose $I_{1}, I_{2} \in \Obj(\mathcal{C})$ are two initial objects in the category $\mathcal{C}$.
 	Thus, each of $\Hom_{\,\mathcal{C}}(I_{1},I_{1})$, $\Hom_{\,\mathcal{C}}(I_{2},I_{2})$,
 	$\Hom_{\,\mathcal{C}}(I_{1},I_{2})$ and $\Hom_{\,\mathcal{C}}(I_{2},I_{1})$ is a singleton set.
 	In particular, we have
