updated: z-PerfectSecrecy-OneTime-Pad.tex

--- a/cryptography/study-notes/mathematical-cryptography/z-PerfectSecrecy-OneTime-Pad.tex
+++ b/cryptography/study-notes/mathematical-cryptography/z-PerfectSecrecy-OneTime-Pad.tex
@@ -221,7 +221,7 @@ has \textbf{perfect secrecy}, then the following statements hold:
 Suppose:
 \begin{itemize}
 \item
-	$(\mathcal{T},\mathcal{C},\mathcal{K},E,D,\mu,\mathcal{F})$
+	$(\mathcal{T},\mathcal{C},\mathcal{K},E,D,\mu)$
 	is a Shannon cryptosystem, and
 \item
 	$\#\!\left(\,\mathcal{T}\,\right)$
@@ -230,7 +230,7 @@ Suppose:
 	\,$=$\,
 	$\#\!\left(\,\mathcal{K}\,\right)$\,.
 \end{itemize}
-Then, $(\mathcal{T},\mathcal{C},\mathcal{K},E,D,\mu,\mathcal{F})$
+Then, $(\mathcal{T},\mathcal{C},\mathcal{K},E,D,\mu)$
 has \textbf{perfect secrecy} if and only if
 \begin{itemize}
 \item
