--- a/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
+++ b/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
@@ -99,6 +99,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%\input{z-some-simple-cryptosystems}
 \input{z-Block-Ciphers}
 \input{z-Stream-Ciphers}
 
